Workload analysis screens revised

--- a/netishr/workloadanalysis_pic_new.html
+++ b/netishr/workloadanalysis_pic_new.html
@@ -428,7 +428,7 @@
                                 <div class="form-group">
                                     <!-- Initially select first staff -->
                                     <div>
-                                        <label class="control-label" for="status">Select a job title: </label>
+                                        <label class="control-label" for="status">Select a person: </label>
                                         <select data-placeholder="Choose a job title..." class="chosen-select" tabindex="2">
                                             <option value="1">DIR-BR Director of Business Development - Tono Kartono</option>
                                             <option selected value="2">DIR-FIN Director of Finance - Jono Karjono</option>
