--- a/netishr/workloadanalysis_pic.html
+++ b/netishr/workloadanalysis_pic.html
@@ -426,6 +426,31 @@
                                 <p>
 
                                     <input type="checkbox" class="js-switch" />&nbsp;Show only if analysis is not done
+
+                                    <div class="btn-group">
+                                        <a href="#" class="btn-primary btn-xs" data-toggle="modal" data-target="#setallsuperiors">Set all direct superiors as PIC</a>
+
+                                        <div class="modal inmodal fade" id="setallsuperiors" tabindex="-1" role="dialog" aria-hidden="true">
+                                            <div class="modal-dialog modal-sm">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                        <h4 class="modal-title">Confirmation</h4>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <p>Are you sure to set all direct superiors to be the PIC of the subordinates?</p>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-white" data-dismiss="modal">Cancel</button>
+                                                        <button type="button" class="btn btn-primary">Yes</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+
+                                    </div>
                                 </p>
 
                                 <table class="footable table table-stripped toggle-arrow-tiny">
