--- a/netishr/accountability_matrix.html
+++ b/netishr/accountability_matrix.html
@@ -194,8 +194,8 @@
                                                         <td><buttton type="button" class="btn btn-primary btn-xs">Active</button></td>
                                                         <td class="text-center">
                                                             <div class="btn-group">
-                                                                <button class="btn-white btn btn-xs">Edit</button>
-                                                                <button class="btn-white btn btn-xs">Delete</button>
+                                                                <a href="accountability_matrix_edit.html"><button class="btn-white btn btn-xs">Edit</button></a>
+                                                                <a href="#"><button class="btn-white btn btn-xs">Delete</button></a>
                                                             </div>
                                                         </td>
                                                     </tr>
@@ -206,8 +206,8 @@
                                                         <td><buttton type="button" class="btn btn-primary btn-xs">Active</button></td>
                                                         <td class="text-center">
                                                             <div class="btn-group">
-                                                                <button class="btn-white btn btn-xs">Edit</button>
-                                                                <button class="btn-white btn btn-xs">Delete</button>
+                                                                <a href="accountability_matrix_edit.html"><button class="btn-white btn btn-xs">Edit</button></a>
+                                                                <a href="#"><button class="btn-white btn btn-xs">Delete</button></a>
                                                             </div>
                                                         </td>
                                                     </tr>
