--- a/netishr/workloadanalysis_pic.html
+++ b/netishr/workloadanalysis_pic.html
@@ -67,7 +67,7 @@
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="account.html">Account</a></li>
+                                <li><a href="myaccount.html">Account</a></li>
                                 <li><a href="mysettings.html">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
