Updated NetisHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -410,7 +410,7 @@
                                     </div>
                                     <div class="ibox-content">
                                         <div><a href="administrator_general_settings.html">Settings</a>
-                                            <div class="small">Various settings for Performance</div>
+                                            <div class="small">Various general settings</div>
                                         </div>
                                         <p></p>
                                         <div><a href="corporate_calendar.html">Corporate Annual Calendar</a>
@@ -494,6 +494,10 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
+                                        <div><a href="performance_mgmt_periods.html">Settings</a>
+                                            <div class="small">Various settings for Performance</div>
+                                        </div>
+                                        <p></p>
                                         <div><a href="performance_mgmt_periods.html">Performance Management Periods</a>
                                             <div class="small">Manage performance management periods</div>
                                         </div>
