--- a/netishr/index.html
+++ b/netishr/index.html
@@ -156,10 +156,10 @@
                             <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="performance_planning.html">Result Targets (KPI)</a>
+                                        <a href="performance_planning_kpi.html">KPI</a>
                                     </li>
                                     <li>
-                                        <a href="#">Process Targets (Competency)</a>
+                                        <a href="performance_planning_competency.html">Competency</a>
                                     </li>
                                 </ul>
                             </li>
